--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -364,14 +364,14 @@ pre {
   background: url("../image/icon_table.png") no-repeat;
 }
 
-input.ng-invalid-required {
-  border: 1px solid #dd4b39;
-}
-
-input.ng-invalid-required:after {
-  content: "*";
-  color: red;
-}
+//input.ng-invalid-required {
+//  border: 1px solid #dd4b39;
+//}
+//
+//input.ng-invalid-required:after {
+//  content: "*";
+//  color: red;
+//}
 
 .nav-pills>li {
 cursor: pointer;
