--- a/webapp/app/partials/models/model_detail.html
+++ b/webapp/app/partials/models/model_detail.html
@@ -30,7 +30,7 @@
             <a href="" ng-click="model.visiblePage='json_model';">JSON</a>
         </li>
         <li class="dropdown" ng-if="userService.hasRole('ROLE_ADMIN') || hasPermission(model, permissions.ADMINISTRATION.mask, permissions.MANAGEMENT.mask, permissions.OPERATION.mask)">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+            <a class="dropdown-toggle highlight-bule" data-toggle="dropdown" href="#" aria-expanded="true">
                 <i class="fa fa-star"> Action </i> <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
