--- a/webapp/app/partials/cubeDesigner/measures.html
+++ b/webapp/app/partials/cubeDesigner/measures.html
@@ -17,65 +17,67 @@
 -->
 
 <!-- Measures Summary -->
-<div class="dataTables_wrapper form-inline no-footer" ng-if="cubeMetaFrame.measures.length > 0">
-    <div class="row">
-        <span class="nav-search input-icon input-icon-right" style="margin-left: 22px;">
-            <input type="text" placeholder="Filter ..." class="nav-search-input" ng-model="state.dimensionFilter"/>
-            <i class="ace-icon fa fa-search nav-search-icon"></i>
-        </span>
+<ng-form name="forms.cube_measure_form">
+    <div class="dataTables_wrapper form-inline no-footer" ng-if="cubeMetaFrame.measures.length > 0">
+            <div class="row">
+                <span class="nav-search input-icon input-icon-right" style="margin-left: 22px;">
+                    <input type="text" placeholder="Filter ..." class="nav-search-input" ng-model="state.dimensionFilter"/>
+                    <i class="ace-icon fa fa-search nav-search-icon"></i>
+                </span>
+            </div>
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Expression</th>
+                        <th>Param Type</th>
+                        <th>Param Value</th>
+                        <th>Return Type</th>
+                        <th ng-if="state.mode=='edit'">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="measure in cubeMetaFrame.measures | filter: state.measureFilter track by $index">
+                        <td>
+                            <!--ID -->
+                            <b>{{measure.id = ($index + 1)}}</b>
+                        </td>
+                        <td>
+                            <!--Name -->
+                            <span tooltip="measure name..">{{measure.name}}</span>
+                        </td>
+                        <td>
+                            <!--Expression -->
+                            <span>{{measure.function.expression}}</span>
+                        </td>
+                        <td>
+                            <!--Param Type -->
+                            <span>{{measure.function.parameter.type}}</span>
+                        </td>
+                        <td>
+                            <!--Param Value -->
+                            <span>{{measure.function.parameter.value}}</span>
+                        </td>
+                        <td>
+                            <!--Return Type -->
+                            <span>{{measure.function.returntype}}</span>
+                        </td>
+                        <td ng-if="state.mode=='edit'">
+                            <!--Edit Button -->
+                            <button class="btn btn-xs btn-info" ng-click="addNewMeasure(measure)">
+                                <i class="fa fa-pencil"></i>
+                            </button>
+                            <!--Remove Button -->
+                            <button class="btn btn-xs  btn-danger" ng-click="removeElement(cubeMetaFrame.measures, measure)">
+                                <i class="fa fa-trash-o"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
-    <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Expression</th>
-                <th>Param Type</th>
-                <th>Param Value</th>
-                <th>Return Type</th>
-                <th ng-if="state.mode=='edit'">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="measure in cubeMetaFrame.measures | filter: state.measureFilter track by $index">
-                <td>
-                    <!--ID -->
-                    <b>{{measure.id = ($index + 1)}}</b>
-                </td>
-                <td>
-                    <!--Name -->
-                    <span tooltip="measure name..">{{measure.name}}</span>
-                </td>
-                <td>
-                    <!--Expression -->
-                    <span>{{measure.function.expression}}</span>
-                </td>
-                <td>
-                    <!--Param Type -->
-                    <span>{{measure.function.parameter.type}}</span>
-                </td>
-                <td>
-                    <!--Param Value -->
-                    <span>{{measure.function.parameter.value}}</span>
-                </td>
-                <td>
-                    <!--Return Type -->
-                    <span>{{measure.function.returntype}}</span>
-                </td>
-                <td ng-if="state.mode=='edit'">
-                    <!--Edit Button -->
-                    <button class="btn btn-xs btn-info" ng-click="addNewMeasure(measure)">
-                        <i class="fa fa-pencil"></i>
-                    </button>
-                    <!--Remove Button -->
-                    <button class="btn btn-xs  btn-danger" ng-click="removeElement(cubeMetaFrame.measures, measure)">
-                        <i class="fa fa-trash-o"></i>
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
+</ng-form>
 
 <!--Add Measures Button-->
 <div class="form-group">
