--- a/webapp/app/partials/modelDesigner/conditions_settings.html
+++ b/webapp/app/partials/modelDesigner/conditions_settings.html
@@ -19,7 +19,7 @@
 <div ng-controller="CubeRefreshCtrl">
 <div class="row">
     <div class="col-xs-8">
-
+      <ng-form name="forms.model_setting_form" novalidate>
         <!--Cube Partition Type-->
         <div class="form-group" ng-hide="true">
             <div class="row">
@@ -43,7 +43,6 @@
                 <div class="col-xs-12 col-sm-6">
 
                     <select style="width: 100%" chosen data-placeholder="e.g. DEFAULT.TEST_KYLIN_FACT.CAL_DT"
-                            ng-required="model.partition_desc.partition_date_start"
                             ng-model="model.partition_desc.partition_date_column"
                             ng-if="state.mode=='edit'"
                             data-placement=""
@@ -71,6 +70,21 @@
                 </div>
             </div>
         </div>
+
+          <div class="form-group" ng-show="userService.hasRole('ROLE_ADMIN')">
+              <div class="row">
+                  <label class="control-label col-xs-12 col-sm-3 no-padding-right font-color-default"><b>Cube Size</b></label>
+                  <div class="col-xs-12 col-sm-6">
+                      <select class="form-control"
+                              ng-if="state.mode=='edit'"
+                              chosen ng-model="model.capacity"
+                              ng-options="ddt as ddt for ddt in cubeConfig.cubeCapacities">
+                          <option value=""></option>
+                      </select>
+                      <span ng-if="state.mode=='view'">{{model.capacity}}</span>
+                  </div>
+              </div>
+          </div>
 
         <!--Filter Condition-->
         <div class="form-group">
@@ -103,6 +117,7 @@
                 </div>
             </div>
         </div>
+       </ng-form>
     </div>
 
     <div class="col-xs-4">
